remove vec and mat sizes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 
 FIND_PACKAGE(PkgConfig REQUIRED)
 
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
+
 if (NOT DEFINED PETSC_LIB_PATH)
     set(PETSC_LIB_PATH "/opt/anl/petsc")
 endif()
